# plottools

./: .gitignore  .mkdocs.yml  .travis.yml  404.html  README.md  build-docs.sh  colors.html  demos.py  figure.html  guide.html  index.html  insets.html  pyproject.toml  scalebars.html  search.html  setup.py  sitemap.xml  spines.html  starter.html  subplots.html  ticks.html
api/: align.html  arrows.html  aspect.html  axes.html  circuits.html  colors.html  common.html  figure.html  grid.html  index.html  insets.html  labels.html  latex.html  legend.html  neurons.html  params.html  plottools.html  rcsetup.html  remove.html  scalebars.html  significance.html  spines.html  styles.html  subplots.html  tag.html  text.html  ticks.html  title.html  version.html
code/: index.html
colors/: index.html
doc/: colors.md  guide.md  insets.md  scalebars.md  spines.md  ticks.md
docs/: code.md  colors.md  figure.md  guide.md  scalebars.md  spines.md  starter.md  structure.md  subplots.md  ticks.md
figure/: index.html
figures/: code.py  colors.py  insets.py  scalebars.py  spines.py  ticks.py
guide/: index.html
insets/: index.html
plottools/: __init__.py  align.py  arrows.py  aspect.py  axes.py  axislabels.py  circuits.py  colors.py  common.py  figure.py  grid.py  insets.py  labelaxes.py  labels.py  latex.py  legend.py  neurons.py  params.py  plotformat.py  plottools.py  rcsetup.py  scalebars.py  significance.py  spines.py  styles.py  subplots.py  tag.py  text.py  ticks.py  version.py
scalebars/: index.html
search/: search_index.json
spines/: index.html
(+109 files in other folders)
